[gd_scene load_steps=6 format=2]

[ext_resource path="res://Objects/PhysicsBody/Character/Enemies/Boss_Computer/Large_cannon.gd" type="Script" id=1]
[ext_resource path="res://Assets/Blocks/Grey_block.png" type="Texture" id=2]
[ext_resource path="res://Assets/Blocks/Yellow_Block.png" type="Texture" id=3]
[ext_resource path="res://Assets/Blocks/Red_block.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=8]
radius = 20.0
height = 0.0

[node name="Large_cannon" type="Node2D"]
position = Vector2( 160, 90 )
script = ExtResource( 1 )

[node name="MainBody" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="Cannon" type="Sprite" parent="."]
position = Vector2( 0, 30 )
scale = Vector2( 2, 1 )
texture = ExtResource( 3 )

[node name="PrepareSprite" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 0, 60 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 300 )

[node name="Laser_Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 4096
collision_mask = 0
monitoring = false

[node name="Laser" type="Sprite" parent="Laser_Hitbox"]
position = Vector2( 0, 10 )
scale = Vector2( 2, 1 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Laser_Hitbox"]
shape = SubResource( 8 )
disabled = true

[node name="Tween1" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]

[connection signal="tween_completed" from="Tween1" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_completed" from="Tween2" to="." method="_on_Tween_tween_completed"]
